--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,13 +11,18 @@ server.port=9999
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
-# database setting
+# database local data base setting
 # connection
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/trip?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=root
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/trip?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
+#spring.datasource.username=root
+#spring.datasource.password=root
 
+#AWS RDS connection
+spring.datasource.url=jdbc:mysql://trip-db.chmm4k2ue1kx.us-east-1.rds.amazonaws.com:3306/trip-db
+spring.datasource.username=admin
+spring.datasource.password=wjdtjrdud98!
+spring.jpa.hibernate.ddl-auto=update
 
 # mybatis(type alias & mapper locations)
 mybatis.type-aliases-package=com.example.trip.**.dto
