--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.mvc.view.suffix=.jsp
 #spring.datasource.password=root
 
 #AWS RDS connection
-spring.datasource.url=jdbc:mysql://trip-db.chmm4k2ue1kx.us-east-1.rds.amazonaws.com:3306/trip-db
+spring.datasource.url=jdbc:mysql://trip-db.chmm4k2ue1kx.us-east-1.rds.amazonaws.com:3306/trip
 spring.datasource.username=admin
 spring.datasource.password=wjdtjrdud98!
 spring.jpa.hibernate.ddl-auto=update
