--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -18,6 +18,9 @@ spring.mvc.view.suffix=.jsp
 #spring.datasource.username=root
 #spring.datasource.password=root
 
+jwt.access-token.expiretime=3600000
+jwt.refresh-token.expiretime=7200000
+
 #AWS RDS connection
 spring.datasource.url=jdbc:mysql://trip-db.chmm4k2ue1kx.us-east-1.rds.amazonaws.com:3306/trip
 spring.datasource.username=admin
