--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -13,19 +13,19 @@ spring.mvc.view.suffix=.jsp
 
 # database local data base setting
 # connection
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/trip?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
-#spring.datasource.username=root
-#spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/trip?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=root
 
 jwt.access-token.expiretime=3600000
 jwt.refresh-token.expiretime=7200000
 
 #AWS RDS connection
-spring.datasource.url=jdbc:mysql://trip-db.chmm4k2ue1kx.us-east-1.rds.amazonaws.com:3306/trip
-spring.datasource.username=admin
-spring.datasource.password=wjdtjrdud98!
-spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://trip-db.chmm4k2ue1kx.us-east-1.rds.amazonaws.com:3306/trip
+#spring.datasource.username=admin
+#spring.datasource.password=wjdtjrdud98!
+#spring.jpa.hibernate.ddl-auto=update
 
 # mybatis(type alias & mapper locations)
 mybatis.type-aliases-package=com.example.trip.**.dto
