--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -21,9 +21,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/trip?serverTimezone=UTC&useUni
 spring.datasource.username=root
 spring.datasource.password=7848
 
-
+jwt.secret-key=your-very-secure-256-bit-random-secret-key-here
 jwt.access-token.expiretime=3600000
 jwt.refresh-token.expiretime=7200000
+
 
 #AWS RDS connection
 #spring.datasource.url=jdbc:mysql://trip-db.chmm4k2ue1kx.us-east-1.rds.amazonaws.com:3306/trip
