--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,15 +11,14 @@ server.port=9999
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
-# database local data base setting
+# database setting
 # connection
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/trip?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
-
-#spring.datasource.username=root
-#spring.datasource.password=root
 spring.datasource.username=root
-spring.datasource.password=7848
+spring.datasource.password=root
+#spring.datasource.username=root
+#spring.datasource.password=7848
 
 
 jwt.access-token.expiretime=3600000
