--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -15,14 +15,17 @@ spring.mvc.view.suffix=.jsp
 # connection
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/trip?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=root
 #spring.datasource.username=root
-#spring.datasource.password=7848
+#spring.datasource.password=root
+spring.datasource.username=root
+spring.datasource.password=7848
 
 jwt.secret-key=your-very-secure-256-bit-random-secret-key-here
 jwt.access-token.expiretime=3600000
 jwt.refresh-token.expiretime=7200000
+
+# Enable debug logging for Spring Security
+logging.level.org.springframework.security=DEBUG
 
 
 #AWS RDS connection
