--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -38,3 +38,11 @@ mybatis.mapper-locations=classpath:mapper/*.xml
 
 logging.level.root=info
 logging.level.com.ssafy=trace
+
+# gpt load properties 
+# sk-proj-LBcdBoXSSoeUqbD9RZJAT3BlbkFJVuc0AM6AK2dqcgqb95D0
+#sk-proj-9oIj5v1VTQojTVE18wlbT3BlbkFJTWVUYbzwb3jqBsWaWPQ9
+openai.api.key=sk-proj-LBcdBoXSSoeUqbD9RZJAT3BlbkFJVuc0AM6AK2dqcgqb95D0
+openai.api.url=https://api.openai.com/v1/chat/completions
+openai.model=gpt-3.5-turbo
+
