--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -40,9 +40,11 @@ logging.level.root=info
 logging.level.com.ssafy=trace
 
 # gpt load properties 
+# 지훈이꺼
 # sk-proj-LBcdBoXSSoeUqbD9RZJAT3BlbkFJVuc0AM6AK2dqcgqb95D0
-#sk-proj-9oIj5v1VTQojTVE18wlbT3BlbkFJTWVUYbzwb3jqBsWaWPQ9
-openai.api.key=sk-proj-LBcdBoXSSoeUqbD9RZJAT3BlbkFJVuc0AM6AK2dqcgqb95D0
+# 내꺼
+#sk-proj-6g2EFVii1mJla6ehfrumT3BlbkFJurXcmPoqoF8RIAyglcHA
+openai.api.key=sk-proj-6g2EFVii1mJla6ehfrumT3BlbkFJurXcmPoqoF8RIAyglcHA
 openai.api.url=https://api.openai.com/v1/chat/completions
 openai.model=gpt-3.5-turbo
 
