--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -15,10 +15,10 @@ spring.mvc.view.suffix=.jsp
 # connection
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/trip?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
-#spring.datasource.username=root
-#spring.datasource.password=root
 spring.datasource.username=root
-spring.datasource.password=7848
+spring.datasource.password=root
+#spring.datasource.username=root
+#spring.datasource.password=7848
 
 jwt.secret-key=ssafy-ssafy-ssafy-ssafy-ssafy-ssafy
 jwt.access-token.expiretime=3600000
