--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -53,3 +53,16 @@ openai.api.key=sk-proj-6g2EFVii1mJla6ehfrumT3BlbkFJurXcmPoqoF8RIAyglcHA
 openai.api.url=https://api.openai.com/v1/chat/completions
 openai.model=gpt-3.5-turbo
 
+
+
+
+
+spring.mail.host=smtp.naver.com
+spring.mail.port=587
+spring.mail.username=qqa109@naver.com
+spring.mail.password=qqafree7848
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.naver.com
+spring.mail.properties.mail.debug=true
