--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -19,22 +19,36 @@ spring.datasource.username=root
 spring.datasource.password=root
 #spring.datasource.username=root
 #spring.datasource.password=7848
-
-jwt.secret-key=your-very-secure-256-bit-random-secret-key-here
+jwt.secret-key=ssafy-ssafy-ssafy-ssafy-ssafy-ssafy
 jwt.access-token.expiretime=3600000
 jwt.refresh-token.expiretime=7200000
+
+# Enable debug logging for Spring Security
+logging.level.org.springframework.security=DEBUG
 
 
 #AWS RDS connection
 #spring.datasource.url=jdbc:mysql://trip-db.chmm4k2ue1kx.us-east-1.rds.amazonaws.com:3306/trip
 #spring.datasource.username=admin
-#spring.datasource.password=wjdtjrdud98!
+#spring.datasource.password=w
 #spring.jpa.hibernate.ddl-auto=update
 
 # mybatis(type alias & mapper locations)
 mybatis.type-aliases-package=com.example.trip.**.dto
+
+
 #mybatis.mapper-locations=classpath:/**/dao/*.xml
 mybatis.mapper-locations=classpath:mapper/*.xml
 
 logging.level.root=info
 logging.level.com.ssafy=trace
+
+# gpt load properties 
+# 싸피꺼
+# sk-proj-ZAwStM2lp92y3qecSXVAT3BlbkFJTL8mhMBDsCdjM2P5CP9a
+# 내꺼
+#sk-proj-6g2EFVii1mJla6ehfrumT3BlbkFJurXcmPoqoF8RIAyglcHA
+openai.api.key=sk-proj-ZAwStM2lp92y3qecSXVAT3BlbkFJTL8mhMBDsCdjM2P5CP9a
+openai.api.url=https://api.openai.com/v1/chat/completions
+openai.model=gpt-3.5-turbo
+
